# ehr-fm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
ehr_fm/: callbacks.py  cli_utils.py  defaults.py  io.py  logger.py  meds_reader_utils.py  tokenizer.py  trainer.py  types.py  validation.py  vocabulary.py
ehr_fm/data/: README.md  __init__.py  collate.py  dataset.py  sampler.py
ehr_fm/embedding/: __init__.py  build.py  config.py  lookup.py
ehr_fm/models/: __init__.py  config.py  input_encoder.py  task_heads.py  transformer.py  utils.py
tests/: conftest.py  test_callbacks.py  test_cli_utils.py  test_collation.py  test_compute_numeric_stats.py  test_compute_representations.py  test_dataset_extended.py  test_dataset_labels.py  test_embedding_lookup.py  test_factorized_pretokenize.py  test_factorized_vocab.py  test_factorized_vocab_helpers.py  test_input_encoder.py  test_interval_tokens.py  test_iv_gated_interval_injection.py  test_joint_mode_regression.py  test_joint_vocab.py  test_meds_reader_utils.py  test_none_filtering.py  test_numeric_features.py  test_pretokenize_embedding.py  test_pretokenize_embedding_multiworker.py  test_pretokenize_multiworker.py  test_quantile_prescanner.py  test_separate_rope.py  test_task_heads.py  test_tokenizer_pretokenize_extended.py  test_train_helpers.py  test_trainer.py  test_transformer_attention.py  test_transforms_pipeline.py  test_transforms_validation.py  test_transforms_visit_time.py  test_validation.py  test_vocabulary_extended.py
tutorials/: generate_synthetic_data.py  tutorial.ipynb
(+59 files in other folders)
