[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ehr_fm"
version = "0.0.3"
description = "A package to train Foundation Models leveraging the MEDS EHR data format"
authors = [
    "Santiago Eduardo Arciniegas <santiago.arciniegas@sickkids.ca>",
    "Lin Lawrence Guo <lawrence.guo@sickkids.ca>",
]
packages = [
    {include = "ehr_fm"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
polars = "~1.27.0"
pydantic = "~2.11.0"
meds-reader = "0.1.9"
meds = "0.3.3"
pyyaml = "~6.0.2"
torch = "~2.7.0"
torch-optimi = "~0.2.1"
transformers = "~4.51.0"
datasets = "~3.5.0"
accelerate = "~1.6.0"
xformers = "0.0.30"
wandb = "~0.19.11"

[tool.poetry.scripts]
pretokenize = "ehr_fm.scripts.pretokenize:main"
train_vocabulary = "ehr_fm.scripts.train_vocabulary:main"
compute_representations = "ehr_fm.scripts.compute_representations:main"
train_ehr_fm = "ehr_fm.scripts.train_ehr_fm:main"
apply_meds_transforms = "ehr_fm.scripts.apply_meds_transforms:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["notebooks", "*.egg", "build", "dist"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
